--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -44,12 +44,12 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
 [homepage]
   layout = "background" # valid options: page, profile, hero, card, background, custom
   homepageImage = "img/trumanSigma.jpg" # used in: hero, and card
-  showRecent = false
-  showRecentItems = 5
+  showRecent = true
+  showRecentItems = 12
   showMoreLink = false
-  showMoreLinkDest = "/posts/"
+  showMoreLinkDest = "posts/"
   cardView = true
-  cardViewScreenWidth = true
+  cardViewScreenWidth = false
   layoutBackgroundBlur = true # only used when layout equals background
 
 [article]
