--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,4 +1,4 @@
-9# -- Theme Options --
+# -- Theme Options --
 # These options control how the theme functions and allow you to
 # customise the display of your website.
 #
